@@ -1,3 +1,9 @@
+2002-02-11  pottendo  <pottendo@utanet.at>
+
+	* de.po: Updated.
+
+	* pl.po: New File. Credits to Flooder.
+
 2002-02-09  pottendo  <pottendo@utanet.at>
 
 	* de.po: Updated.
